--- a/Apps/Playground/CMakeLists.txt
+++ b/Apps/Playground/CMakeLists.txt
@@ -16,6 +16,7 @@ set(SCRIPTS
     "Scripts/experience.js"
     "Scripts/playground_runner.js"
     "Scripts/validation_native.js"
+    "Scripts/webgpu_smoke.js"
     "Scripts/config.json")
 
 set(SOURCES
@@ -40,7 +41,6 @@ if(APPLE)
             "AppleShared/GestureRecognizer.swift")
         set_source_files_properties(${SCRIPTS} ${BABYLON_SCRIPTS} ${DEPENDENCIES} PROPERTIES MACOSX_PACKAGE_LOCATION "Scripts")
         set_source_files_properties(${REFERENCE_IMAGES} PROPERTIES MACOSX_PACKAGE_LOCATION "ReferenceImages")
-        set(ADDITIONAL_LIBRARIES ${ADDITIONAL_LIBRARIES} PRIVATE NativeCamera)
     elseif(VISIONOS)
         set(PLIST_FILE
             "${CMAKE_CURRENT_LIST_DIR}/visionOS/Info.plist")
@@ -55,7 +55,6 @@ if(APPLE)
     else()
         set(PLIST_FILE "${CMAKE_CURRENT_LIST_DIR}/macOS/Info.plist")
         set(STORYBOARD "${CMAKE_CURRENT_LIST_DIR}/macOS/Base.lproj/Main.storyboard")
-        set(ADDITIONAL_LIBRARIES ${ADDITIONAL_LIBRARIES} PRIVATE NativeCamera)
         set(RESOURCE_FILES ${STORYBOARD})
         set(SOURCES ${SOURCES}
             "macOS/main.m"
@@ -102,7 +101,6 @@ elseif(WIN32)
         "Win32/Resource.h"
         "Win32/small.ico"
         "Win32/targetver.h")
-    set(ADDITIONAL_LIBRARIES PRIVATE NativeCamera)
 endif()
 
 if(WIN32)
@@ -123,24 +121,29 @@ endif()
 
 target_include_directories(Playground PRIVATE ".")
 
+set(PLAYGROUND_PLATFORM_LIBRARIES)
+if(APPLE AND NOT IOS AND NOT VISIONOS)
+    list(APPEND PLAYGROUND_PLATFORM_LIBRARIES
+        "-framework Cocoa"
+        "-framework Foundation"
+        "-framework CoreFoundation"
+        "-framework Metal"
+        "-framework MetalKit"
+        "-framework QuartzCore"
+        "-lobjc")
+endif()
+
 target_link_libraries(Playground
     PRIVATE AppRuntime
     PRIVATE Blob
-    PRIVATE Canvas
     PRIVATE Console
-    PRIVATE ExternalTexture
     PRIVATE GraphicsDevice
-    PRIVATE NativeCamera
-    PRIVATE NativeCapture
-    PRIVATE NativeEncoding
-    PRIVATE NativeEngine
-    PRIVATE NativeInput
-    PRIVATE NativeOptimizations
-    PRIVATE NativeTracing
+    PRIVATE NativeWebGPU
     PRIVATE ScriptLoader
-    PRIVATE TestUtils
+    PRIVATE URL
     PRIVATE Window
     PRIVATE XMLHttpRequest
+    ${PLAYGROUND_PLATFORM_LIBRARIES}
     ${ADDITIONAL_LIBRARIES}
     ${BABYLON_NATIVE_PLAYGROUND_EXTENSION_LIBRARIES})
 
@@ -148,6 +151,19 @@ target_link_libraries(Playground
 # If we can set minimum required to 3.26+, then we can use the `copy -t` syntax instead.
 add_custom_command(TARGET Playground POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E $<IF:$<BOOL:$<TARGET_RUNTIME_DLLS:Playground>>,copy,true> $<TARGET_RUNTIME_DLLS:Playground> $<TARGET_FILE_DIR:Playground> COMMAND_EXPAND_LISTS)
+
+if(APPLE)
+    add_custom_command(TARGET Playground POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E make_directory "$<TARGET_FILE_DIR:Playground>/../Resources/Scripts")
+
+    foreach(SCRIPT_PATH ${SCRIPTS} ${BABYLON_SCRIPTS} ${DEPENDENCIES})
+        get_filename_component(SCRIPT_NAME "${SCRIPT_PATH}" NAME)
+        add_custom_command(TARGET Playground POST_BUILD
+            COMMAND ${CMAKE_COMMAND} -E copy_if_different
+                "${CMAKE_CURRENT_SOURCE_DIR}/${SCRIPT_PATH}"
+                "$<TARGET_FILE_DIR:Playground>/../Resources/Scripts/${SCRIPT_NAME}")
+    endforeach()
+endif()
 
 if (UNIX AND NOT APPLE AND NOT ANDROID)
     # Ubuntu mixes old experimental header and new runtime libraries
@@ -228,9 +244,17 @@ if(WINDOWS_STORE)
 else()
     foreach(SCRIPT ${SCRIPTS} ${BABYLON_SCRIPTS} ${DEPENDENCIES})
         get_filename_component(SCRIPT_NAME "${SCRIPT}" NAME)
+        if(APPLE)
+            set(SCRIPT_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/Playground.app/Contents/Resources/Scripts")
+            set(SCRIPT_OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/Playground.app/Contents/Resources/Scripts/${SCRIPT_NAME}")
+        else()
+            set(SCRIPT_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/Scripts")
+            set(SCRIPT_OUTPUT_PATH "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/Scripts/${SCRIPT_NAME}")
+        endif()
         add_custom_command(
-            OUTPUT "${CMAKE_CFG_INTDIR}/Scripts/${SCRIPT_NAME}"
-            COMMAND "${CMAKE_COMMAND}" -E copy "${CMAKE_CURRENT_SOURCE_DIR}/${SCRIPT}" "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_CFG_INTDIR}/Scripts/${SCRIPT_NAME}"
+            OUTPUT "${SCRIPT_OUTPUT_PATH}"
+            COMMAND "${CMAKE_COMMAND}" -E make_directory "${SCRIPT_OUTPUT_DIR}"
+            COMMAND "${CMAKE_COMMAND}" -E copy "${CMAKE_CURRENT_SOURCE_DIR}/${SCRIPT}" "${SCRIPT_OUTPUT_PATH}"
             COMMENT "Copying ${SCRIPT_NAME}"
             MAIN_DEPENDENCY "${CMAKE_CURRENT_SOURCE_DIR}/${SCRIPT}")
     endforeach()
