--- a/nightly.yml
+++ b/nightly.yml
@@ -21,7 +21,7 @@ jobs:
   - checkout: self
 
   - script: |
-      cmake -G "Visual Studio 17 2022" -B build -A x64 -D BX_CONFIG_DEBUG=ON -D BGFX_CONFIG_MAX_FRAME_BUFFERS=256 -D BABYLON_DEBUG_TRACE=ON
+      cmake -G "Visual Studio 17 2022" -B build -A x64 -D BABYLON_DEBUG_TRACE=ON
     displayName: 'Generate solution'
 
   - script: |
@@ -41,11 +41,6 @@ jobs:
     workingDirectory: build/Apps/Playground/RelWithDebInfo
     displayName: 'Run VisualizationTests'
 
-  - script: |
-      UnitTests.exe
-    workingDirectory: build/Apps/UnitTests/RelWithDebInfo
-    displayName: 'Run UnitTests'
-
   - task: PublishBuildArtifacts@1
     displayName: Upload Errors images artifact
     condition: failed()
@@ -58,9 +53,3 @@ jobs:
     inputs:
       PathtoPublish: build/Apps/Playground
       ArtifactName: BabylonNativeNightlyPlayground
-
-  - task: PublishBuildArtifacts@1
-    displayName: Upload UnitTests
-    inputs:
-      PathtoPublish: build/Apps/UnitTests
-      ArtifactName: BabylonNativeNightlyUnitTests
